--- a/src/back_news.html
+++ b/src/back_news.html
@@ -11,7 +11,7 @@
     <!-- 側邊導覽列 -->
     @@include('./layout/back_aside.html')
 
-    <article class="bk_in">
+    <article class="bk_in" id="back-news">
 
         @@include('./layout/back_title.html', {
             "back_title" : "最新消息管理"
@@ -22,29 +22,29 @@
 
             <div class="left">
                 <button class="btn-yellow" id="add_news"><a href="./back_news_add.html">新增</a></button>
-                <button class="btn-red" id="remove_news">刪除</a></button>
+                <button class="btn-red" id="remove_news" @click="deleteNews">刪除</a></button>
             </div>
 
             <div class="right">
                 
-                <span>排序:</span>
-                <select class="select_right">
-                    <option>最新消息</option>
-                    <option>活動消息</option>
-                    <option>全部</option>
-                </select>
+                <!-- <span>篩選:</span>
+                <select class="select_right" @change="filter">
+                    <option value="all">全部</option>
+                    <option value="announce">園區公告</option>
+                    <option value="event">活動消息</option>                  
+                </select> -->
 
-                <input type="search" placeholder="搜尋..." class="select_left">
-                <!-- <div class="search" enter-class="select_left">
-                    <input type="text" class="search-input" id="member_search" />
+                <!-- <input type="search" placeholder="搜尋..." class="select_left"> -->
+                <div class="search" enter-class="select_left">
+                    <input type="text" class="search-input" id="member_search" @keyup="searchNews"/>
                     <img src="./img/icon/search.png" alt="" class="search_icon" />
-                </div> -->
+                </div>
 
             </div>
 
         </div>
 
-        <main class="news-list" id="back-news">
+        <main class="news-list">
             <div class="main">
                 <p>封面標題</p>
                 <p>文章標題</p>
@@ -52,9 +52,9 @@
             </div>
     
             <ul class="list">
-                <li class="list_in" v-for="news in list" :data-id="news.ID">
+                <li class="list_in news-li" v-for="news in list" :data-id="news.ID">
                     <label class="check_container">
-                        <input type="checkbox">
+                        <input type="checkbox" class="check-news">
                         <span class="checkmark"></span>
                     </label>
                     <img :src="news.IMG" alt="">
