--- a/src/back_order_detail.html
+++ b/src/back_order_detail.html
@@ -61,7 +61,7 @@
 
         <a href="./back_order.html" class="btn-green">返回</a>
 
-        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
+        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第74期第六組學員專題成果作品，本平台僅供學習、展示之用。</p>
 
     </main>
 
