--- a/src/member.html
+++ b/src/member.html
@@ -74,7 +74,7 @@
 				<button class="save_btn" id="confirmBtn">確認修改</button>
 			</div>
 			<div class="mb_btn">
-				<button class="logout" id="logotut">帳號登出</button>
+				<button class="logout" id="logout">帳號登出</button>
 			</div>
 		</div>
 	</div>
