--- a/src/back_order_detail.html
+++ b/src/back_order_detail.html
@@ -18,7 +18,7 @@
         "back_title" : "訂單內容"
         })
         <div id="app">
-            <div v-for="orderDetail in orderDetails">
+            <div>
                 <section class="order-info">
                     <p class="title">訂單商品</p>
                     <ul class="content">
@@ -27,18 +27,20 @@
                             <p>商品名稱</p>
                             <p>價格</p>
                             <p>數量</p>
-                            <p>小計</p>
+                            <!-- <p>小計</p> -->
                         </li>
-                        <li v-for="" class="product">
-                            <p><img :src="orderDetail.MAIN_PIC[orderDetail.PRODUCT_ID]" alt=""></p>
+                        <li v-for="orderDetail in orderDetails" class="product">
+                            <p><img :src="orderDetail.MAIN_PIC" alt=""></p>
                             <p>{{orderDetail.NAME}}</p>
                             <p>{{orderDetail.UNIT_PRICE}}</p>
                             <p>{{orderDetail.QUANTITY}}</p>
-                            <p>NT${{orderDetail.TOTAL}}</p>
+                            <!-- <p>{{orderDetail.UNIT_PRICE}}*{{orderDetail.QUANTITY}}</p> -->
                         </li>
                     </ul>
                 </section>
+            </div>
 
+            <div v-for="orderDetail in orderDetails" v-if="orderDetail.ORDER_ID">
                 <section class="order-info">
                     <p class="title">訂單資料</p>
                     <div class="content info">
@@ -57,11 +59,11 @@
                 </section>
             </div>
 
-        </div>
 
-        <a href="./back_order.html" class="btn-green">返回</a>
 
-        <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
+            <a href="./back_order.html" class="btn-green">返回</a>
+
+            <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
 
     </main>
 
