--- a/src/back_order_detail.html
+++ b/src/back_order_detail.html
@@ -40,20 +40,20 @@
                 </section>
             </div>
 
-            <div v-for="orderDetail in orderDetails" v-if="orderDetail.ORDER_ID">
+            <div>
                 <section class="order-info">
                     <p class="title">訂單資料</p>
                     <div class="content info">
-                        <p>訂單編號：{{orderDetail.ORDER_ID}}</p>
-                        <p>成立日期：{{orderDetail.ORDER_DATE}}</p>
-                        <p>消費金額：NT${{orderDetail.TOTAL}}</p>
-                        <p>付款狀態：{{orderDetail.PAYMENT_STATE}}</p>
-                        <p>付款方式：{{orderDetail.PAYMENT}}</p>
-                        <p>訂購人：{{orderDetail.RECEIVER_NAME}}</p>
-                        <p>會員帳號：{{orderDetail.EMAIL}}</p>
-                        <p>收件地址：{{orderDetail.COUNTRY}}{{orderDetail.DISTRICT}}{{orderDetail.STREET}}</p>
+                        <p>訂單編號：{{orderDetails[0].ORDER_ID}}</p>
+                        <p>成立日期：{{orderDetails[0].ORDER_DATE}}</p>
+                        <p>消費金額：NT${{orderDetails[0].TOTAL}}</p>
+                        <p>付款狀態：{{orderDetails[0].PAYMENT_STATE}}</p>
+                        <p>付款方式：{{orderDetails[0].PAYMENT}}</p>
+                        <p>訂購人：{{orderDetails[0].RECEIVER_NAME}}</p>
+                        <p>會員帳號：{{orderDetails[0].EMAIL}}</p>
+                        <p>收件地址：{{orderDetails[0].COUNTRY}}{{orderDetails[0].DISTRICT}}{{orderDetails[0].STREET}}</p>
                         <!-- <p>物流編號：000001331</p> 資料庫沒有這個值 -->
-                        <p>物流狀態：{{orderDetail.LOGISTICS_STATE}}</p>
+                        <p>物流狀態：{{orderDetails[0].LOGISTICS_STATE}}</p>
                     </div>
 
                 </section>
