--- a/src/back_order_detail.html
+++ b/src/back_order_detail.html
@@ -34,7 +34,7 @@
                             <p>{{orderDetail.NAME}}</p>
                             <p>{{orderDetail.UNIT_PRICE}}</p>
                             <p>{{orderDetail.QUANTITY}}</p>
-                            <p>{{orderDetail.UNIT_PRICE * orderDetail.QUANTITY}}</p>
+                            <p>NT${{orderDetail.UNIT_PRICE * orderDetail.QUANTITY}}</p>
                         </li>
                     </ul>
                 </section>
