--- a/src/news_in.html
+++ b/src/news_in.html
@@ -13,6 +13,7 @@
 
     <main>
 
+
         <img src="./img/material/circle_red_800.png" class="redboll">
         <img src="./img/material/circle_yellow_800.png" class="yellowboll">
 
@@ -20,48 +21,33 @@
             <h3 class="pageTitle">最新消息</h3>
         </div>
 
-        <main class="main_min container-lg">
+        <div id="app">
+            <div v-for="item in items">
+                <main class="main_min container-lg">
 
-            <div class="divtop">
-                <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
-                <br><br>
-                <pre>發布日期      3/15</pre>
+                    <div class="divtop">
+                        <h3>{{item.TITLE}}</h3>
+                        <br><br>
+                        <pre>發布日期:{{item.DATE}}</pre>
+                    </div>
+
+                    <div class="down container-lg">
+                        <div class="left container-lg">
+                            <p>{{item.DESCRIPTION}}</p>
+
+                            <a href="news.html">返回列表 </a>
+                        </div>
+                        <div class="right container-lg">
+                            <img :src="item.IMG" alt="">
+                        </div>
+                    </div>
+
+                </main>
             </div>
-
-            <div class="down container-lg">
-
-                <div class="left container-lg">
-                    <p>在兒童節4/2~4/5號連假期間，
-                        <br>
-                        12歲以下兒童通通免費入園!
-                        <br>
-                        陪同成人可享票價優惠180元!
-                        <br>
-                        <br>
-                        歡迎大朋友小朋友藝起來
-                        <br>
-                        Sìkha 牧場度過美好時光
-                    </p>
-
-                    <a href="news.html">
-                        <-返回列表 </a>
-                            <br>
-                            <a href="">
-                                <-上一則 </a>
-                                    <a href="news_in2.html"> 下一則-> </a>
-
-                </div>
-                <div class="right container-lg">
-                    <img src="./img/news/Rectangle 196.png" alt="">
-                </div>
-            </div>
-
-
-
-
-        </main>
+        </div>
         <!-- footer -->
         @@include('./layout/footer.html')
+        <script src="js/news_in.js"></script>
 </body>
 
 </html>
