--- a/src/back_login.html
+++ b/src/back_login.html
@@ -29,7 +29,7 @@
         <button type="button" class="bl_btn">登入</button>
     </form>
 </div>
-<p class="b_p">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，<br>本平台僅供學習、展示之用。參考資源：六甲山牧場、清境農場。</p>
+<p class="b_p">本網站為緯育TibaMe前端設計工程師班第74期第六組學員專題成果作品，<br>本平台僅供學習、展示之用。參考資源：六甲山牧場、清境農場。</p>
 
 <script>
     // 登入按鈕目前直接跳轉後台首頁
