--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -100,7 +100,7 @@
 							</li>
 
 							<li class="splide__slide">
-								<a href="#">
+								<a href="./product_detail.html?prd_number=1">
 									<img src="./img/products/blanket_r.jpg" alt="" />
 									<div class="pd_recommend_text">
 										<p class="pd_recommend_name">羊毛毯(紅)</p>
