fix: 價錢、庫存改為number屬性，對應瀏覽器隱藏調整箭頭

--- a/src/back_product_detail.html
+++ b/src/back_product_detail.html
@@ -53,18 +53,18 @@
                     <div class="info_box">
                         <div>
                             <p for="prd_cost">成本</p>
-                            <input type="text" id="prd_cost">
+                            <input type="number" id="prd_cost">
                         </div>
                         <div>
                             <p for="prd_price">售價</p>
-                            <input type="text" id="prd_price">
+                            <input type="number" id="prd_price">
                         </div>
                     </div>
 
                     <div class="info_box">
                         <div>
                             <p for="prd_inStock">庫存</p>
-                            <input type="text" id="prd_inStock">
+                            <input type="number" id="prd_inStock">
                         </div>
                         <div>
                             <p for="prd_kind">商品類別</p>
